<resources>
    <string name="app_name">EXAMEN_RPM_01</string>
    <string name="agregar">Agregar</string>
    <string name="edad">Edad</string>
    <string name="observaciones">Observaciones</string>
    <string name="cancelar">Cancelar</string>
    <string name="actualizar">Actualizar</string>
    <string name="regresar">Regresar</string>
    <string name="eliminar">Eliminar</string>
    <string name="name">Roberto Pichardo Mier</string>
    <string name="grupo">7CM1</string>
    <string name="fecha_de_salida">Fecha de salida</string>
    <string name="fecha_de_regreso">Fecha de Regreso</string>
    <string name="buscar">Buscar</string>
    <string name="destino">Destino</string>
    <string name="eiminar">Eiminar</string>
</resources>